adjusted endtypes and castings